fixed spacing

--- a/src/components/FriendCard/style.css
+++ b/src/components/FriendCard/style.css
@@ -9,7 +9,7 @@
    
   }
   .card-container { 
-    padding-left:10em;
+    margin-left: 3.5em;
     display: flex;
     flex-flow: row wrap;
     align-content: center;  
